// Vitest Snapshot v1

exports[`getDiagnostics 1`] = `
{
  "mainDocumentTransferSize": 50074,
  "maxRtt": 145.65800000000002,
  "maxServerLatency": 4980.4710000000005,
  "numFonts": 5,
  "numRequests": 201,
  "numScripts": 36,
  "numStylesheets": 7,
  "numTasks": 110,
  "numTasksOver100ms": 0,
  "numTasksOver10ms": 1,
  "numTasksOver25ms": 0,
  "numTasksOver500ms": 0,
  "numTasksOver50ms": 0,
  "rtt": 19.016000000000002,
  "throughput": 569783.0945443822,
  "totalByteWeight": 3897521,
  "totalTaskTime": 56.882000000000026,
}
`;

exports[`getMainThreadWorkBreakdown 1`] = `
[
  {
    "duration": 25.485,
    "group": "styleLayout",
  },
  {
    "duration": 22.353,
    "group": "other",
  },
  {
    "duration": 4.353999999999999,
    "group": "scriptEvaluation",
  },
  {
    "duration": 1.678,
    "group": "parseHTML",
  },
  {
    "duration": 1.411,
    "group": "garbageCollection",
  },
  {
    "duration": 0.8830000000000001,
    "group": "scriptParseCompile",
  },
  {
    "duration": 0.718,
    "group": "paintCompositeRender",
  },
]
`;

exports[`getMetrics 1`] = `
{
  "cumulativeLayoutShift": 24347,
  "domContentLoaded": undefined,
  "firstContentfulPaint": 18090,
  "firstMeaningfulPaint": 23117,
  "firstPaint": undefined,
  "firstVisualChange": undefined,
  "interactive": 24117,
  "largestContentfulPaint": 23117,
  "lastVisualChange": undefined,
  "load": undefined,
  "maxPotentialFID": 1234,
  "serverResponseTime": 105,
  "speedIndex": 20411,
  "timeToFirstByte": 105,
  "totalBlockingTime": 20411,
}
`;

exports[`getPerformanceScore 1`] = `0`;

exports[`should allow to audit PWA results 1`] = `
{
  "details": {
    "appleTouchIcon": {
      "details": {},
      "displayValue": "apple-touch-icon",
      "score": 1,
    },
    "contentWith": {
      "details": {},
      "displayValue": "content-width",
      "score": 1,
    },
    "isInstallable": {
      "details": {},
      "displayValue": "installable-manifest",
      "score": 1,
    },
    "maskableIcon": {
      "details": {},
      "displayValue": "maskable-icon",
      "score": 1,
    },
    "serviceWorker": {
      "details": {},
      "displayValue": "service-worker",
      "score": 1,
    },
    "splashScreen": {
      "details": {},
      "displayValue": "splash-screen",
      "score": 0,
    },
    "themedOmnibox": {
      "details": {},
      "displayValue": "themed-omnibox",
      "score": 1,
    },
    "viewport": {
      "details": {},
      "displayValue": "viewport",
      "score": 1,
    },
  },
  "passed": false,
}
`;

exports[`should allow to audit PWA results 2`] = `
{
  "details": {
    "maskableIcon": {
      "details": {},
      "displayValue": "maskable-icon",
      "score": 1,
    },
    "serviceWorker": {
      "details": {},
      "displayValue": "service-worker",
      "score": 1,
    },
  },
  "passed": true,
}
`;
